<resources>
    <string name="app_name">نانو نت - وكيل</string>
    <string name="login">تسجيل الدخول</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="participate">مشترك</string>
    <string name="provider">وكيل</string>
    <string name="admin">مدير</string>
    <string name="enter_username_password_error">الرجاء ادخال اسم المستخدم وكلمة المرور</string>
    <string name="try_again">حاول مجدداً</string>
    <string name="providers">الوكلاء</string>
    <string name="home">الرئيسية</string>
    <string name="add_provider">إضافة وكيل</string>
    <string name="search">بحث</string>
    <string name="menu">القائمة</string>
    <string name="no_provider_yet">لا يوجد وكلاء</string>
    <string name="name">الاسم</string>
    <string name="email">اﻹيميل</string>
    <string name="save">حفظ</string>
    <string name="enter_username">اسم المستخدم مطلوب</string>
    <string name="enter_name">الاسم مطلوب</string>
    <string name="enter_email">الايميل مطلوب</string>
    <string name="enter_password">كلمة المرور مطلوبة</string>
    <string name="edit">تعديل</string>
    <string name="delete">حذف</string>
    <string name="renew">تجديد الاشتراك</string>
    <string name="sure_delete">تأكيد الحذف؟</string>
    <string name="sure_stop">تأكيد التعطيل؟</string>
    <string name="sure_active">تأكيد إعادة التغعيل؟</string>
    <string name="confirm">تأكيد</string>
    <string name="cancel">إلغاء</string>
    <string name="start_date">بداية الاشتراك</string>
    <string name="day">يوم</string>
    <string name="month">شهر</string>
    <string name="year">سنة</string>
    <string name="choose_date">اختر تاريخ</string>
    <string name="stop">تعطيل</string>
    <string name="send_email">أرسل ايميل</string>
    <string name="make_call">إجراء مكالمة</string>
    <string name="expired">الاشتراك منتهي</string>
    <string name="remain">باقي لنهاية الاشتراك</string>
    <string name="all_providers">كل الوكلاء</string>
    <string name="exist">موجود مسبقاً</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">اﻹعدادات</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="customers_status">حالة المشتركين</string>
    <string name="order_by">ترتيب حسب</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="by_name">حسب الاسم</string>
    <string name="by_days">حسب عدد اﻷيام</string>
    <string name="sure_logout">تأكيد تسجيل الخروج؟</string>
    <string name="customers">المشتركين</string>
    <string name="customer">مشترك</string>
    <string name="cost">سعر الاشتراك</string>
    <string name="get">واصل</string>
    <string name="amount">الديون السابقة</string>
    <string name="mobile">رقم الهاتف</string>
    <string name="enter_cost">سعر الاشتراك مطلوب</string>
    <string name="enter_cash">المبلغ مطلوب</string>
    <string name="enter_amount">يجب إدخال رقم</string>
    <string name="no_customers_yet">لا يوجد مشتركين</string>
    <string name="by_amount">حسب المديونية</string>
    <string name="nano_url">رابط نانو</string>
    <string name="nano_password">كلمة المرور نانو</string>
    <string name="nano_username">اسم المستخدم نانو</string>
    <string name="pay">تسديد مبلغ</string>
    <string name="share">مشاركة</string>
    <string name="log">السجل</string>
    <string name="add_amount">إضافة دين</string>
    <string name="add_note">إضافة ملاحظة</string>
    <string name="new_amount">الدين</string>
    <string name="add">إضافة</string>
    <string name="cash">المبلغ المسدد</string>
    <string name="pay_date">تاريخ التسديد</string>
    <string name="cash_bigger">المبلغ المسدد أكبر من الدين الفعلي</string>
    <string name="total_customers">عدد المشتركين</string>
    <string name="total_amounts">الدين الكلي</string>
    <string name="total_get">الديون المحصلة</string>
    <string name="user">اليوزر</string>
    <string name="days_remain">اﻷيام المتبقية</string>
    <string name="end_date">نهاية الاشتراك</string>
    <string name="current_amount">الديون</string>
    <string name="alerts">التنبيهات</string>
    <string name="back">رجوع</string>
    <string name="send">إرسال</string>
    <string name="new_alert">إضافة تنبيه</string>
    <string name="alert_message">رسالة التنبيه</string>
    <string name="no_alerts_yet">لا يوجد تنبيهات</string>
    <string name="done">تم</string>
    <string name="alerts_settings">التنبيهات التلقائية</string>
    <string name="tickets">التكتات</string>
    <string name="no_tickets_yet">لا يوجد تكتات!</string>
    <string name="no_answers_yet">لا يوجد ردود!</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="replay">ردك هنا…</string>
    <string name="delete_answer">حذف الرد</string>
    <string name="delete_ticket">حذف التيكت</string>
    <string name="lock_ticket">قفل التيكت</string>
    <string name="sure_lock">تأكيد قفل التيكت؟</string>
    <string name="services">الخدمات</string>
    <string name="no_services_yet">لا يوجد خدمات!</string>
    <string name="add_service">إضافة خدمة</string>
    <string name="_name">التسمية</string>
    <string name="_url">رابط الخدمة (URL)</string>
    <string name="enter_url">عنوان URL مطلوب</string>
    <string name="choose_image">اختر صورة</string>
    <string name="permisstion_required">السماحية مطلوبة</string>
    <string name="go_link">عرض الرابط</string>
    <string name="plans">الاشتراكات</string>
    <string name="no_plans_yet">لا يوجد اشتراكات!</string>
    <string name="add_plan">إضافة إشتراك</string>
    <string name="price">سعر الاشتراك</string>
    <string name="description">الوصف</string>
</resources>