<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AddPlanActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/rootCV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/widget_margin"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/card">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AppHeadText"
                android:text="@string/add_plan" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameTIL"
                        style="@style/AppTextInputLayoutBase"
                        android:layout_marginTop="0dp"
                        app:counterEnabled="false"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/AppEditTextBase"
                            android:hint="@string/_name"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/costTIL"
                        style="@style/AppTextInputLayoutBase"
                        app:prefixText="000,"
                        app:startIconDrawable="@drawable/ic_round_attach_money">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/AppEditTextBase"
                            android:hint="@string/cost"
                            android:gravity="top"
                            android:inputType="numberSigned" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descriptionTIL"
                        style="@style/AppTextInputLayoutBase"
                        android:layout_height="wrap_content"
                        app:counterEnabled="false"
                        app:errorEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/AppEditTextBase"
                            android:layout_height="@dimen/app_bar_height"
                            android:gravity="top"
                            android:hint="@string/description" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/addBTN"
                        style="@style/AppMainButton"
                        android:layout_width="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/add" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</RelativeLayout>