<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/card">

        <LinearLayout
            android:id="@+id/rootLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTIL"
                style="@style/AppTextInputLayoutBase"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_round_alternate_email">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppEditTextBase"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                style="@style/AppTextInputLayoutBase"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_round_security">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppEditTextBase"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveBTN"
                style="@style/AppMainButton"
                android:layout_marginBottom="@dimen/main"
                android:text="@string/save" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>