<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/rootCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/card">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cashTIL"
                style="@style/AppTextInputLayoutBase"
                app:prefixText="000,"
                app:startIconDrawable="@drawable/ic_round_attach_money">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppEditTextBase"
                    android:hint="@string/cash"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTIL"
                style="@style/AppTextInputLayoutBase"
                app:startIconDrawable="@drawable/ic_round_today">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppEditTextBase"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/pay_date"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveBTN"
                style="@style/AppMainButton"
                android:layout_marginBottom="@dimen/main"
                android:text="@string/pay" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</RelativeLayout>